# puzzle-solver

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  USAGE.md  build.py  features.json  main.py  pyproject.toml
.factory/: AGENTS.md  init.sh  services.yaml
.factory/skills/: worker.md
.factory/skills/refactor-worker/: SKILL.md
.factory/validation/1/scrutiny/: synthesis.json
.factory/validation/1/user-testing/: synthesis.json
.factory/validation/2/scrutiny/: synthesis.json
.factory/validation/json-import/scrutiny/: synthesis.json
.factory/validation/json-import/user-testing/: synthesis.json
.factory/validation/repo-foundation/scrutiny/: synthesis.json
.github/workflows/: ci.yml  release.yml
docs/design/: architecture.md  data-model.json
src/: logger.py
src/models/: __init__.py  puzzle.py
src/services/: config.py  deduction.py  llm_service.py  prompt_engine.py
src/storage/: __init__.py  cache_manager.py  json_repository.py  json_store.py  repository.py  sqlite_repository.py  sqlite_schema.py  sqlite_store.py
src/ui/: app.py  state.py  theme.py
src/ui/pages/: custom.py  manage.py  matrix.py  review.py  scripts.py  settings.py
tests/: test_app.py  test_cache_manager.py  test_cascade.py  test_deduction.py  test_e2e.py  test_integration.py  test_json_import.py  test_json_repository.py  test_llm_service.py  test_matrix.py  test_models.py  test_performance_smoke.py  test_prompt_engine.py  test_scripts.py  test_sqlite_repository.py  test_sqlite_store.py  test_state.py  test_storage.py
tools/: check_flet_api.py
(+44 files in other folders)
