[project]
name = "puzzle-solver"
version = "0.0.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flet[all]>=0.28.0",
    "pydantic>=2.12.0",
    "openai>=2.0.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.0.0",
    "loguru>=0.7.3",
    "ruff>=0.15.10",
    "prek>=0.3.9",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = [
    "E501",   # line too long — handled by formatter, not enforced as error
    "UP042",  # StrEnum migration — unsafe for Pydantic str enums
]

[tool.ruff.lint.isort]
known-first-party = ["src"]
